fixed legend spacing on lollipop charts

--- a/packages/chart/src/scss/main.scss
+++ b/packages/chart/src/scss/main.scss
@@ -260,8 +260,8 @@
       flex-wrap: nowrap;
 
       .legend-container {
-        width: 25%;
-        margin-left: 1em;
+        width: 15%;
+        margin-left: 8em;
         order: 2;
 
         &.left {
